--- a/k8s/kgs-service.yaml
+++ b/k8s/kgs-service.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: kgs
-          image:
+          image: hughluo/gtu_kgs:latest
           ports:
             - name: kgs-service
               containerPort: 50052
