--- a/k8s/api-service.yaml
+++ b/k8s/api-service.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: api
-          image: 
+          image: hughluo/gtu_api:latest
           ports:
             - name: api-service
               containerPort: 8080
@@ -32,5 +32,5 @@ spec:
   ports:
     - name: http
       port: 8080
-      nodePort: 3000
+      nodePort: 30000
   type: NodePort
