--- a/k8s/kgs-service.yaml
+++ b/k8s/kgs-service.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: kgs
           image: hughluo/gtu_kgs:latest
+          imagePullPolicy: "Always"
           ports:
             - name: kgs-service
               containerPort: 50052
